--- a/src/app/pages/teacher-eval/extracredits/extracredits.component.html
+++ b/src/app/pages/teacher-eval/extracredits/extracredits.component.html
@@ -45,7 +45,13 @@
   <ng-template pTemplate="footer">
     <p-button icon="pi pi-check" (click)="addCredits(teacher.id)" label="Total" class="p-m-2 p-button-success"></p-button>
   </ng-template>
+
+
 </p-dialog>
+
+
+
+
 
 <div class="p-grid">
   <div class="p-col-12 p-md-6 p-lg-8">
@@ -92,9 +98,9 @@
       <td title="{{items.name}}" > {{items.total}} </td>
       <td title="{{items.name}}">
        
-          <!--<a pButton  style="margin-left: 5px;" class="p-button-warning" icon="pi pi-user-edit"></a>-->
+          <a pButton  style="margin-left: 5px;" class="p-button-warning" (click)="selectUpdate(items.id)" icon="pi pi-user-edit"></a>
           <a pButton title="eliminar" (click)="deleteCredit(items.id)" style="margin-left: 5px;"  class="p-button-danger" icon="pi pi-trash"></a>
-     
+          
         
       </td>
     </tr>
@@ -103,3 +109,12 @@
   <p-scrollTop target="parent"></p-scrollTop> 
 </div>
 
+<p-confirmDialog #cd [style]="{width: '50vw'}">
+  <ng-template pTemplate="header">
+      <h3> Confirmar Accion</h3>
+  </ng-template>
+  <ng-template pTemplate="footer">
+      <button type="button" pButton icon="pi pi-times" label="No" (click)="cd.reject()"></button>
+      <button type="button" pButton icon="pi pi-check" label="Yes" (click)="cd.accept(); getCheckSelect()"></button>
+  </ng-template>
+</p-confirmDialog>
