--- a/src/app/pages/teacher-eval/coevaluation-coordinator-area/coevaluation-coordinator-area.component.html
+++ b/src/app/pages/teacher-eval/coevaluation-coordinator-area/coevaluation-coordinator-area.component.html
@@ -1,32 +1,43 @@
 <div class="p-shadow-24">
     <div style="background-color:white;" class="p-fluid p-formgrid p-grid">
       <div class="p-field p-col">
-        <h1>HETEROEVALUACIÓN - COORDINADORES DE CARRERA - 2021-1</h1>
+        <h1>COEVALUACION - COORDINADORES DE ÁREA, UNIDAD O DESIGNADOS POR EL OCS 2021-1</h1>
         <P>INSTRUCCIONES:  Lea detenidamente cada uno de las preguntas que se mostrarán a continuación y 
             seleccione su respuesta según el rango de ponderación del 1 al 4, tomando en cuenta que el 
             rango mínimo es 1 y el máximo 4; en lo posible responda a las preguntas de esta encuesta en 
             base a las evidencias que le proporcionen las instancias correspondientes, a fin de garantizar 
-            una evaluación objetiva</P>
+            una evaluación objetiva.</P>
       </div>
     </div>
   </div>
-  
+ 
   <p></p>
-  <form [formGroup]="questions">
-    <div class="form-group" style="background-color:white;">
-      <ul>
-        <li *ngFor="let question of pregunta; let i = index">
-          <p></p>
-          {{ question.name }}
-          <div *ngFor="let category of evaluacion" class="p-field-checkbox">
-            <p-radioButton name="category" [value]= "category.name" [(ngModel)]="modelo[i].valor"
-              [disabled]="category.key === 'R'"></p-radioButton>
-            <label [for]="category.key">{{category.name}}</label>
-          </div>
-        </li>
-       </ul>
-       <button (click)="getCheckSelect()" pButton type="button" label="Click" >Guardar</button>
-    </div>
-  </form>
-  
-  
+<form [formGroup]="questions">
+  <div class="form-group" style="background-color:white;">
+    <ul>
+      <li *ngFor="let question of pregunta; let i = index">
+        <p></p>
+        {{ question.name }}
+        <div *ngFor="let category of evaluacion" class="p-field-checkbox">
+          <p-radioButton required name="category" [value]="category.name" [(ngModel)]="modelo[i].valor"></p-radioButton>
+          <label>{{category.name}}</label>
+        </div>
+      </li>
+    </ul>
+  </div>
+</form>
+
+<center>
+<button pButton type="button" routerLink="/teacher-list" style="margin-left: 10px" label="Regresar"
+  icon="pi pi-times"></button>
+<button (click)="confirm()" pButton icon="pi pi-check" style="margin-left: 10px" label="Guardar"></button>
+</center>
+<p-confirmDialog #cd [style]="{width: '50vw'}">
+  <ng-template pTemplate="header">
+    <h3>Confirmar Guardado</h3>
+  </ng-template>
+  <ng-template pTemplate="footer">
+    <button type="button" pButton icon="pi pi-times" label="No" (click)="cd.reject()"></button>
+    <button type="button" pButton icon="pi pi-check" label="Yes" (click)="cd.accept(); getCheckSelect()"></button>
+  </ng-template>
+</p-confirmDialog>
