--- a/src/app/pages/job-board/landing-page/web-professional/professional-list/professional-list.component.html
+++ b/src/app/pages/job-board/landing-page/web-professional/professional-list/professional-list.component.html
@@ -23,21 +23,21 @@
                         <div class="p-xl-6 p-lg-12 p-md-6 p-sm-6 p-col-6">
                             <button pButton pRipple
                                     type="button"
-                                    label="Contactar"
-                                    class="p-button-success"
-                                    icon="pi pi-check"
+                                    label="Curriculum"
+                                    class="p-button-info"
+                                    icon="pi pi-file"
                                     iconPos="left"
-                                    (click)="applyProfessional(professional)">
+                                    (click)="showCurriculum(professional)">
                             </button>
                         </div>
                         <div class="p-xl-6 p-lg-12 p-md-6 p-sm-6 p-col-6">
                             <button pButton pRipple
                                     type="button"
-                                    label="Ver más"
-                                    class="p-button-info"
-                                    icon="pi pi-eye"
+                                    label="Contactar"
+                                    class="p-button-success"
+                                    icon="pi pi-check"
                                     iconPos="left"
-                                    (click)="showCurriculum(professional)">
+                                    (click)="applyProfessional(professional)">
                             </button>
                         </div>
                     </div>
