--- a/src/app/shared/components/footer/app.footer.component.html
+++ b/src/app/shared/components/footer/app.footer.component.html
@@ -1,6 +1,6 @@
 <div class="layout-footer">
     <div class="logo-text">
-        <img [src]="STORAGE_URL+institution.logo" alt="logo"/>
+        <!-- <img [src]="STORAGE_URL+institution.logo" alt="logo"/> -->
         <div class="text">
             <h1 class="hide">&reg;{{institution.denomination}} {{institution.name}}</h1>
             <span>&copy; {{system.date| date:"y"}} Todos los derechos reservados.
