--- a/src/app/pages/teacher-eval/generate-pdf/generate-pdf.component.html
+++ b/src/app/pages/teacher-eval/generate-pdf/generate-pdf.component.html
@@ -4,7 +4,9 @@
     </div>
 
     <div class="p-col-12 p-md-6 p-lg-8">
-      
+        <div class="p-col-12 p-md-6 p-lg-12">
+            <p-messages></p-messages>
+          </div>
     </div>
     <div class="p-col-12 p-md-6 p-lg-2">
         <button (click)="getPDF()" class="p-m-2" pButton icon="pi pi-file-pdf" type="button"
