--- a/src/app/pages/teacher-eval/edit-credit/edit-credit.component.html
+++ b/src/app/pages/teacher-eval/edit-credit/edit-credit.component.html
@@ -1,6 +1,15 @@
+
 <div class="p-fluid p-grid" >
     <div class="p-field p-col-12 p-md-4">
+        <div class="p-col-4">
+            <p-button 
+            (click)="regresar()"  
+            icon="pi pi-arrow-left" label="Regresar" class="p-m-2 p-button-warning"></p-button>
+        </div>
+        <div class="p-col-8">
 
+        </div>
+       
     </div>
     <div class="p-field p-col-12 p-md-4">
         
@@ -44,17 +53,17 @@
     
                     <h2 class="p-text-center"> Total de Puntos : {{total}} </h2>
                 </div>
-         
+            
                
                   
                    <div class="p-field p-col-12 ">
                     <p-button 
                     (click)="actualizar(diploma_yavirac, title_fourth_level, OCS_member, governing_processes, process_nouns, support_processes, total )"  style="position: relative; right: 4px"
-                    icon="pi pi-user-edit" label="Total" class="p-m-2 p-button-warning"></p-button>
+                    icon="pi pi-user-edit" label="Total" class=" p-button-warning"></p-button>
                 </div>
            
               
-          
+        
                 
            
         </div>
@@ -63,9 +72,10 @@
     
     </div>
     <div class="p-field p-col-12 p-md-4">
-
+        <p-messages></p-messages>
     </div>
 </div>
+
 
 
 <p-confirmDialog #cd [style]="{width: '50vw'}">
