--- a/src/app/pages/teacher-eval/edit-investigation/edit-investigation.component.html
+++ b/src/app/pages/teacher-eval/edit-investigation/edit-investigation.component.html
@@ -1,6 +1,13 @@
 <div class="p-fluid p-grid">
     <div class="p-field p-col-12 p-md-4">
+        <div class="p-col-4">
+            <p-button 
+            (click)="regresar()"  
+            icon="pi pi-arrow-left" label="Regresar" class="p-m-2 p-button-warning"></p-button>
+        </div>
+        <div class="p-col-8">
 
+        </div>
     </div>
     <div class="p-field p-col-12 p-md-4">
 
@@ -54,7 +61,7 @@
 
     </div>
     <div class="p-field p-col-12 p-md-4">
-
+        <p-messages></p-messages>
     </div>
 </div>
 
