--- a/src/app/pages/teacher-eval/investigation/investigation.component.html
+++ b/src/app/pages/teacher-eval/investigation/investigation.component.html
@@ -33,10 +33,10 @@
     </h2>
   </div>
   
-
+  
 </div>
 
-
+<p-messages></p-messages>
 
 <ng-template pTemplate="footer">
   <p-button icon="pi pi-check" (click)="addResearchs(teacher.id)" label="Total" class="p-m-2 p-button-success"></p-button>
@@ -57,6 +57,10 @@
 
 
 </div>
+</div>
+
+<div class="p-col-12 p-md-6 p-lg-12">
+  <p-messages></p-messages>
 </div>
 
 <div style="height: 400px; overflow-x:auto;">
