--- a/src/app/pages/teacher-eval/management/management.component.html
+++ b/src/app/pages/teacher-eval/management/management.component.html
@@ -1,4 +1,4 @@
-<p-dialog header="Creditos Extra" [(visible)]="displayModal" [modal]="true" [style]="{width: '40vw'}"
+<!--<p-dialog header="Creditos Extra" [(visible)]="displayModal" [modal]="true" [style]="{width: '40vw'}"
   [baseZIndex]="10000" [draggable]="false" >
   <div class="p-fluid p-formgrid p-grid">
     <div class="p-field p-col-12 p-md-12">
@@ -46,7 +46,7 @@
   </ng-template>
 </p-dialog>
 
-<!--
+
 <p-dialog header="Puntos de Investigacion" [(visible)]="investigacion" [modal]="true" [style]="{width: '40vw'}"
   [baseZIndex]="10000" [draggable]="false" [resizable]="false">
   <div class="p-fluid p-formgrid p-grid">
@@ -71,7 +71,7 @@
   </ng-template>
 </p-dialog>
 
--->
+
  
 <div class="p-grid">
   <div class="p-col-12 p-md-6 p-lg-8">
@@ -83,7 +83,7 @@
       <button class="p-m-2 p-button-success" (click)="showModalDialog()" icon="pi pi-plus" pButton type="button"
         label="Creditos Extra"></button>
 
-      <!--<button class="p-m-2 p-button-info" (click)="showModalInvestigacion()" icon="pi pi-book" pButton type="button" label="Puntos Investigacion"></button>-->
+      <!--<button class="p-m-2 p-button-info" (click)="showModalInvestigacion()" icon="pi pi-book" pButton type="button" label="Puntos Investigacion"></button>-
 
       <button (click)="pdf()" class="p-m-2" pButton icon="pi pi-file-pdf" type="button" label="Generar PDF"  ></button>
 
@@ -123,7 +123,7 @@
       <th class="suma">Equivalencia Docencia</th>
       <th class="suma">Equivalencia Gestion DIREC. ACADE.</th>
       <th class="total">NOTA FINAL</th>
-      <!--<th style="background-color: white;" >Funciones</th>-->
+      <!--<th style="background-color: white;" >Funciones</th>
     </tr>
     
     <tr *ngFor="let items of teachers"> 
