--- a/src/app/pages/teacher-eval/teacher-list/teacher-list.component.html
+++ b/src/app/pages/teacher-eval/teacher-list/teacher-list.component.html
@@ -3,7 +3,7 @@
         <div class="p-field p-col">
             <h1>EVALUACIÓN DOCENTE 2021-1</h1>
             <P>Por favor evaluar el o los docentes y la(s) materia(s) que haya cursado durante este periodo.
-                Recuerde qie debe evaluar una vez a cada materia que haya recibido junto con el docente que la dictó.
+                Recuerde que debe evaluar una vez a cada materia que haya recibido junto con el docente que la dictó.
             </P>
         </div>
     </div>
@@ -21,7 +21,7 @@
         <tr>
             <td>{{maestro.nombreMaestro}}</td>
             <td>{{maestro.asignatura[0].nombreAsignatura}}</td>
-           <td><a routerLink="/teacher-eval"  class="button"> Evaluar </a></td>          
+           <td><a routerLink="/eval-student-teacher"  class="button"> Evaluar </a></td>          
         </tr>
     </ng-template>
     
