--- a/src/app/pages/teacher-eval/extracredits/extracredits.component.html
+++ b/src/app/pages/teacher-eval/extracredits/extracredits.component.html
@@ -1,6 +1,6 @@
 <p-dialog header="Creditos Extra" [(visible)]="displayModal" [modal]="true" [style]="{width: '40vw'}"
   [baseZIndex]="10000" [draggable]="false">
-
+  
   <div class="p-fluid p-formgrid p-grid">
     <div class="p-field p-col-12 p-md-12">
       <label for="state">Docentes</label>
@@ -8,52 +8,57 @@
       </p-dropdown>
       <small *ngIf="(teacher == null ) " class="p-error">Campo Requerido.</small>
     </div>
+    <form [formGroup]="credits" >
+      <div class="p-fluid p-formgrid p-grid">
+       
     <div class="p-field p-col-12 p-md-6">
       <label>DIPLOMA YAVIRAC (3)</label>
-      <input type="number" class="p-invalid" [(ngModel)]="diploma_yavirac" placeholder="Del 0 a 3 puntos" pInputText>
-      <small *ngIf="(diploma_yavirac == null ) " class="p-error">Campo Requerido.</small>
-      <small *ngIf="(diploma_yavirac >=4  ) " class="p-error">Valor menor o igual a 3.</small>
+      <input type="number" class="p-invalid" formControlName="diploma_yavirac" placeholder="Del 0 a 3 puntos" pInputText>
+     
+      <small *ngIf="(credits.get('diploma_yavirac').value >=4  ) " class="p-error">Valor menor o igual a 3.</small>
     </div>
 
     <div class="p-field p-col-12 p-md-6">
       <label>TÍTULO DE CUARTO NIVEL (2)</label>
-      <input id="cuarto" type="number" required [(ngModel)]="title_fourth_level" placeholder="De 0 a 2 puntos"
+      <input id="cuarto" type="number" required formControlName="title_fourth_level" placeholder="De 0 a 2 puntos"
         pInputText>
-      <small *ngIf="(title_fourth_level == null ) " class="p-error">Campo Requerido.</small>
-      <small *ngIf="(title_fourth_level >=3  ) " class="p-error">Valor menor o igual a 2.</small>
+      
+      <small *ngIf="(credits.get('title_fourth_level').value >=3  ) " class="p-error">Valor menor o igual a 2.</small>
     </div>
     <div class="p-field p-col-12 p-md-6">
       <label>MIEMBRO DE OCS (3)</label>
-      <input id="ocs" type="number" required [(ngModel)]="OCS_member" placeholder="De 0 a 3 puntos" pInputText>
-      <small *ngIf="( OCS_member == null ) " class="p-error">Campo Requerido.</small>
-      <small *ngIf="(OCS_member >=3 ) " class="p-error">Valor menor o igual a 3.</small>
+      <input id="ocs" type="number" required formControlName="OCS_member" placeholder="De 0 a 3 puntos" pInputText>
+      
+      <small *ngIf="(credits.get('OCS_member').value >=4 ) " class="p-error">Valor menor o igual a 3.</small>
     </div>
     <div class="p-field p-col-12 p-md-6">
       <label>PROCESOS GOBERNANTES (coord. academica, coord, administrativa) [5]</label>
-      <input id="proGob" type="number" required [(ngModel)]="governing_processes" placeholder="De 0 a 5 puntos"
+      <input id="proGob" type="number" required formControlName="governing_processes" placeholder="De 0 a 5 puntos"
         pInputText>
-      <small *ngIf="( governing_processes == null ) " class="p-error">Campo Requerido.</small>
-      <small *ngIf="(governing_processes >=6 ) " class="p-error">Valor menor o igual a 5.</small>
+      
+      <small *ngIf="(credits.get('governing_processes').value >=6 ) " class="p-error">Valor menor o igual a 5.</small>
     </div>
     <div class="p-field p-col-12 p-md-6">
       <label>PROCESO SUSTANTIVOS (coordinadores ) [4]</label>
-      <input id="sustantivos" type="number" required [(ngModel)]="process_nouns" placeholder="De 0 a 4 puntos"
+      <input id="sustantivos" type="number" required formControlName="process_nouns" placeholder="De 0 a 4 puntos"
         pInputText>
-      <small *ngIf="( process_nouns == null ) " class="p-error">Campo Requerido.</small>
-      <small *ngIf="(process_nouns >=5  ) " class="p-error">Valor menor o igual a 4.</small>
+      
+      <small *ngIf="(credits.get('process_nouns').value >=5  ) " class="p-error">Valor menor o igual a 4.</small>
     </div>
     <div class="p-field p-col-12 p-md-6">
       <label>PROCESOS DE APOYO(unidades) [3]</label>
-      <input id="apoyo" type="number" [(ngModel)]="support_processes" placeholder="De 1 a 3 puntos" pInputText>
-      <small *ngIf="(support_processes == null ) " class="p-error">Campo Requerido. </small>
-      <small *ngIf="(support_processes >=4) " class="p-error">Valor menor o igual a 3 </small>
+      <input id="apoyo" type="number" formControlName="support_processes" placeholder="De 1 a 3 puntos" pInputText>
+      
+      <small *ngIf="(credits.get('support_processes').value >=4) " class="p-error">Valor menor o igual a 3 </small>
     </div>
 
     <div class="p-field  p-md-12">
 
-      <h2 class="p-text-center" [(ngModel)]="total"> Total de Puntos : {{total}} </h2>
+      <h2 class="p-text-center" formControlName="total"> Total de Puntos : {{total}} </h2>
     </div>
-
+       
+      </div>
+  </form>
 
   </div>
 
@@ -63,7 +68,7 @@
     <p-button icon="pi pi-check" (click)="addCredits(teacher.id)" label="Total" class="p-m-2 p-button-success">
     </p-button>
   </ng-template>
-  
+
 
 </p-dialog>
 
@@ -79,9 +84,9 @@
   <div class="p-col-12 p-md-6 p-lg-4" style="position: relative; left: auto;">
     <button class="p-m-2 p-button-success" (click)="showModalDialog()" icon="pi pi-plus" pButton type="button"
       label="Creditos Extra"></button>
-    
+
   </div>
-  
+
 </div>
 
 <div class="p-col-12 p-md-6 p-lg-12">
