--- a/src/app/pages/job-board/company/offer/offer-form/offer-form.component.html
+++ b/src/app/pages/job-board/company/offer/offer-form/offer-form.component.html
@@ -11,12 +11,11 @@
                                 <i *ngIf="statusField.invalid && (statusField.touched || statusField.dirty)"
                                     class="pi pi-times-circle icon-invalid"></i>
                             </label>
-                            {{statusField.value.name}}
-                            <p-dropdown id="status" [options]="status" formControlName="status" optionLabel="name"
+                            <p-dropdown id="status" [options]="states" formControlName="status" optionLabel="name"
                                 [filter]="true" filterBy="name" placeholder="Seleccione...">
                                 <ng-template pTemplate="selectedItem">
                                     <div class="country-item country-item-value" *ngIf="statusField.value">
-                                        <div>{{statusField.value.code}}</div>
+                                        <div>{{statusField.value.name}}</div>
                                     </div>
                                 </ng-template>
                                 <ng-template let-item pTemplate="item">
